# haskell-nacelle

./: propform_haskell_martin.hs
10_foldingLists/: 10_dbProcessing.hs  10_exercises.hs
11_algebraicDatatypes/: 11_asPatterns.hs  11_binaryTree.hs  Main.hs  (+15 more)
14_testing/addition/: addition.cabal  addition.hs  hie.yaml
14_testing/addition/.stack-work/: stack.sqlite3
14_testing/addition/.stack-work/ghci/291e2bb5/: cabal_macros.h
14_testing/addition/.stack-work/install/x86_64-osx/87cfab14c7f441428a92e57f0b485aa15b3a4f0f6a26f00b3973152fb195c278/8.8.4/pkgdb/: package.cache
14_testing/hangman/: hangman.cabal  hie.yaml
14_testing/hangman/.stack-work/: stack.sqlite3
14_testing/hangman/.stack-work/ghci/04508bec/: cabal_macros.h
14_testing/hangman/.stack-work/ghci/0f8273ec/: cabal_macros.h
14_testing/hangman/.stack-work/ghci/20061c26/: cabal_macros.h
14_testing/hangman/.stack-work/ghci/58d302c9/: cabal_macros.h
14_testing/hangman/.stack-work/ghci/92f615ed/: cabal_macros.h
14_testing/hangman/.stack-work/ghci/c28988f1/: cabal_macros.h
14_testing/hangman/.stack-work/ghci/c9201472/: cabal_macros.h
14_testing/hangman/.stack-work/ghci/ca848e39/: cabal_macros.h
14_testing/hangman/.stack-work/ghci/ca8f6529/: cabal_macros.h
14_testing/hangman/.stack-work/ghci/e1060e69/: cabal_macros.h
14_testing/hangman/.stack-work/install/x86_64-osx/87cfab14c7f441428a92e57f0b485aa15b3a4f0f6a26f00b3973152fb195c278/8.8.4/lib/x86_64-osx-ghc-8.8.4/hangman-0.1.0.0-57VvNVJdO0uSIU6MYtEbI/: Hangman.dyn_hi  Hangman.hi
14_testing/hangman/.stack-work/install/x86_64-osx/87cfab14c7f441428a92e57f0b485aa15b3a4f0f6a26f00b3973152fb195c278/8.8.4/lib/x86_64-osx-ghc-8.8.4/hangman-0.1.0.0-8lm8x8L4V5aBbQx2uS95kz/: Hangman.dyn_hi  Hangman.hi
14_testing/hangman/.stack-work/install/x86_64-osx/87cfab14c7f441428a92e57f0b485aa15b3a4f0f6a26f00b3973152fb195c278/8.8.4/pkgdb/: hangman-0.1.0.0-57VvNVJdO0uSIU6MYtEbI.conf  package.cache
14_testing/hangman/app/: Main.hs
14_testing/hangman/src/: Hangman.hs
14_testing/hangman/test/: Tests.hs
(+153 files in other folders)
