name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            Chris N Julie
license:             BSD3
license-file:        LICENSE
author:              Chris Allen and Julie Moronuki
maintainer:          haskellbook.com
copyright:           2020 Author name here
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

library
  exposed-modules:    Hangman
  hs-source-dirs:     src
  build-depends:      base >= 4.7 && < 5
                    , random
                    , split
                    , hspec
                    , QuickCheck
  default-language:   Haskell2010

executable hangman
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , hangman

test-suite hangman-test
  type: exitcode-stdio-1.0 
  main-is: Tests.hs
  hs-source-dirs: test
  ghc-options: -Wall -main-is Tests 
  default-language: Haskell2010
  build-depends: 
      base >= 4.7 && < 5  
    , QuickCheck
    , hspec
    , hangman

